# Linuity

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  DEVELOPMENT.md  LICENSE  README.md  install.sh  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml  tests.yml
linuity/application/effects/: effect_factory.py  effect_runner.py
linuity/application/ports/: effect.py  support_led_intensity.py  usb_communicate.py  usb_device.py
linuity/application/usecases/: exec_blink_effect.py  exec_bounce_effect.py  exec_flicker_effect.py  exec_gradual_effect.py  exec_off_effect.py  exec_opacity_effect.py  exec_scanner_effect.py  exec_wave_effect.py  send_data_to_device.py
linuity/config/: config_loader.py  preset_service.py
linuity/infra/: logging_config.py  update_checker.py
linuity/infra/device/: hid_device.py  hyperx_device_factory.py  hyperx_quadcast_two.py
linuity/infra/system/: daemon_control.py
linuity/presentation/cli/: cli_controller.py  main.py
linuity/presentation/cli/components/: banner.py
linuity/presentation/daemon/: daemon.py  device_manager.py  main.py
linuity/presentation/gui/: gui_controller.py  main.py
linuity/resources/: linuity.service  preset.conf.example
tests/unit/application/: test_set_brightness.py
tests/unit/application/effects/: test_effect_factory.py  test_effect_runner.py
tests/unit/config/: test_config_loader.py  test_preset_service.py
tests/unit/infra/: test_logging_config.py  test_update_checker.py
(+12 files in other folders)
